bug-066411 - Suggestion: To change the content alignment on the product listing page on mobile devices

--- a/application/views/scss/components/_collection-product.scss
+++ b/application/views/scss/components/_collection-product.scss
@@ -158,11 +158,13 @@
             flex: 1;
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;
             flex-direction: column;
             // padding: 0;
             min-height: 50%;
+            min-width: 0;
             @include media-breakpoint-up(lg) {
+                align-items: center;
                 min-height: 234px;
             }
         }
